<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">QLCoSoVatChat</string>

    <!--Login screen-->
    <string name="name_app">App\nQuản Lí Cơ Sở Vật Chất</string>
    <string name="hint.edit_text.username">Username</string>
    <string name="hint.edit_text.password">Password</string>
    <string name="button.text_label">Đăng nhập</string>
    <string name="text_view.login_label">Đăng nhập</string>

    <!--menu screen-->
    <string name="menu_drawer_open">Open</string>
    <string name="menu_drawer_close">Close</string>
    <string name="text_view.main_screen.qlts_label">Quản lí tài sản</string>
    <string name="text_view.main_screen.qlyc.label">Quản lí yêu cầu</string>
    <string name="text_view.main_screen.qlkh.label">Quản lí kế hoạch</string>
    <string name="logout_label">Đăng xuất</string>

    <!--Quan li yeu cau screen-->
    <string name="hint_search_label">Mã định danh</string>
    <string name="label_tieu_de_yeu_cau">Tiêu đề yêu cầu</string>
    <string name="label_ngay_tao_yeu_cau">Ngày tạo yêu cầu</string>
    <string name="label_trang_thai_yeu_cau">Trạng thái</string>
    <string name="label_action_yeu_cau">Action</string>
    <string name="label_sua">Sửa</string>
    <string name="label_xoa">Xóa</string>

    <!--Tao moi yeu cau screen-->
    <string name="label_tao_moi">Tạo mới yêu cầu</string>
    <string name="label_yeu_cau">Yêu cầu</string>
    <string name="label_mua_sam">Yêu cầu mua sắm</string>
    <string name="label_sua_chua">Yêu cầu sửa chữa</string>
    <string name="label_tieu_de">Tiêu đề</string>
    <string name="label_them_thiet_bi">Thêm thiết bị</string>
    <string name="label_theo_ke_hoach">Theo kế hoạch</string>
    <string name="label_thiet_bi">Thiết bị</string>
    <string name="label_nhom_thiet_bi">Nhóm thiết bị</string>
    <string name="label_so_luong_yc">Sl yêu cầu</string>
    <string name="label_giai_trinh">Giải trình</string>
    <string name="label_tao_va_gui_yeu_cau">Tạo và gửi yêu cầu</string>
    <string name="label_reset">Reset</string>
    <string name="label_huy">Huỷ</string>
    <string name="label_ngoai_ke_hoach">Ngoài kế hoạch</string>

    <!--quan li tai san screen-->
    <string name="label_ma_dinh_danh_qlts">Mã định danh:</string>
    <string name="label_thiet_bi_qlts">Thiết bị:</string>
    <string name="label_nhom_thiet_bi_qlts">Nhóm thiết bị:</string>
    <string name="label_trang_thai_qlts">Trạng thái:</string>
    <string name="label_action_qlts">Sửa trạng thái</string>
    <string name="label_thay_doi_trang_thai_qlts">Thay đổi trạng thái</string>

    <!--quan li ke hoach screen-->
    <string name="label_xoa_qlkh">Xóa</string>
    <string name="label_ma_ke_hoach">Mã kế hoạch:</string>
    <string name="label_ten_ke_hoach">Tên kế hoạch:</string>
    <string name="label_loai_ke_hoach">Loại kế hoạch:</string>
    <string name="label_ngay_tao">Ngày tạo:</string>
    <string name="label_trang_thai_ke_hoach">Trạng thái:</string>
    <string name="label_hu_hong">Hư hỏng</string>
    <string name="label_dang_su_dung">Đang sử dụng</string>
    <string name="label_luu_state">Lưu</string>
    <string name="label_huy_state">Huỷ</string>
    <string name="label_dang_sua_chua">Đang sửa chữa</string>
    <string name="hint_tieu_de_qlyc">Tiêu đề</string>
    <string name="label_danh_sach_ke_hoach">Danh sách kế hoạch</string>
    <string name="label_search_ten_ke_hoach">Tên kế hoạch</string>
    <string name="label_danh_sach_tai_san">Danh sách tài sản</string>
    <string name="label_danh_sach_yeu_cau">Danh sánh yêu cầu</string>
    <string name="hint_nhap_tieu_de_yeu_cau">Nhập tiêu đề</string>
    <string name="label_nhap_giai_trinh_yeu_cau">Nhập giải trình</string>
    <string name="label_chon_qlyc_sc">Chọn</string>
    <string name="label_thiet_bi_qlyc_tmsc">Thiết bị</string>
    <string name="label_ma_dinh_danh_qlyc_tmsc">Mã định danh</string>
    <string name="label_nhom_thiet_bi_qlyc_tmsc">Nhóm thiết bị</string>
    <string name="label_trang_thai_qlyc_tmsc">Trạng thái</string>
    <string name="label_giai_trinh_detail">Giải trình:</string>
    <string name="label_ngay_tao_detail">Ngày tạo:</string>
    <string name="label_don_vi_detail">Đơn vị:</string>
    <string name="label_trang_thai_detail">Trạng thái:</string>
    <string name="label_loai_yeu_cau_detail">Loại yêu cầu:</string>
    <string name="label_tro_ve_yeu_cau_detail">Trở về</string>
    <string name="label_ma_dinh_danh_yc_detail">Mã định danh</string>
    <string name="label_ten_thiet_bi_yc_detail">Tên thiết bị</string>
    <string name="label_nhom_thiet_bi_yc_detail">Nhóm thiết bị</string>
    <string name="label_don_vi_tinh_yc_detail">Đơn vị tính</string>
    <string name="ke_hoach_detail_ten_thiet_bi">Tên thiết bị</string>
    <string name="ke_hoach_detail_nhom_thiet_bi">Nhóm thiết bị</string>
    <string name="ke_hoach_detail_don_vi_tinh">Đơn vị tính</string>
    <string name="ke_hoach_detail_sl_de_nghi">Sl đề nghị</string>
    <string name="ke_hoach_detail_sl_duyet">Sl duyệt</string>
    <string name="ke_hoach_detail_don_gia">Đơn giá</string>
    <string name="ycms_detail_sl_duyet">Sl duyệt</string>
    <string name="ycms_detail_sl_yeu_cau">Sl yêu cầu</string>
    <string name="ycms_detail_don_vi_tinh">Đơn vị tính</string>
    <string name="ycms_detail_nhom_thiet_bi">Nhóm thiết bị</string>
    <string name="ycms_detail_ten_thiet_bi">Tên thiết bị</string>
    <string name="label_not_found_tai_san">Không tìm thấy tài sản</string>
    <string name="label_not_found_yeu_cau">Không tìm thấy yêu cầu</string>
    <string name="label_not_found_ke_hoach">Không tìm thấy kế hoạch</string>
    <string name="tao_moi_ke_hoach_ten_thiet_bi">Tên thiết bị</string>
    <string name="tao_moi_ke_hoach_nhom_thiet_bi">Nhóm thiết bị</string>
    <string name="tao_moi_ke_hoach_don_vi_tinh">Đơn vị tính</string>
    <string name="tao_moi_ke_hoach_sl_de_nghi">Sl đề nghị</string>
    <string name="tao_moi_ke_hoach_don_gia">Đơn giá</string>
    <string name="tao_moi_ke_hoach_thanh_tien">Thành tiền</string>
    <string name="tao_moi_ke_hoach_action">Action</string>
    <string name="tao_moi_ke_hoach_chon_thiet_bi">Chọn thiết bị</string>
    <string name="tao_moi_ke_hoach_chon_loai_ke_hoach">Chọn loại kế hoạch</string>
    <string name="tao_moi_ke_hoach_chon_ten_ke_hoach">Tên kế hoạch</string>
    <string name="tao_moi_ke_hoach_nhap_ten_ke_hoach">Nhập tên kế hoạch</string>
    <string name="tao_moi_ke_hoach_label">Tạo mới kế hoạch</string>
    <string name="tao_moi_ke_hoach_btn_tro_ve">Trở về</string>
    <string name="tao_moi_ke_hoach_btn_tao_gui_ke_hoach">Tạo và gửi kế hoạch</string>
    <string name="tao_moi_ke_hoach_ghi_chu_label">Ghi chú</string>
    <string name="tao_moi_ke_hoach_nhap_ghi_chu">Nhập ghi chú</string>

    <string name="tmkh_chon_thiet_bi_huy">Huỷ</string>
    <string name="tmkh_chon_thiet_bi_luu">Lưu</string>
    <string name="tmkh_chon_thiet_bi_so_luong">Số lượng</string>
    <string name="tmkh_chon_thiet_bi_label_chon_thiet_bi">Chọn thiết bị</string>
    <string name="tmkh_chon_thiet_bi_label_thiet_bi">Thiết bị</string>
    <string name="tmkh_chon_thiet_bi_label_nhom_thiet_bi">Nhóm thiết bị</string>
    <string name="label_sua_qlkh">Sửa</string>
    <string name="sua_chua_ke_hoach_title">Sửa chữa kế hoạch</string>
    <string name="sua_chua_ke_hoach_button">Sửa chữa</string>
    <string name="label_action_tmms">Action</string>
    <string name="label_delete_tmms">Delete</string>
    <string name="label_tao_moi_yeu_cau_tu_ke_hoach">Tạo mới yêu cầu từ kế hoạch</string>
    <string name="label_ke_hoach_ycms">Kế hoạch</string>
    <string name="label_sua_chua_yeu_cau">Sửa chữa yêu cầu</string>


    <!--State qlts-->
    <string-array name="state_array">
        <item>Tất cả</item>
        <item>Đang sử dụng</item>
        <item>Hư hỏng</item>
        <item>Đang sửa chữa</item>
    </string-array>

    <!--State qlyc-->
    <string-array name="state_array_qlyc">
        <item>Tất cả</item>
        <item>Chưa duyệt</item>
        <item>Đã xác nhận</item>
        <item>Đã duyệt</item>
    </string-array>
</resources>
