<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/label_tao_moi"
        android:textColor="#006064"
        android:textSize="25sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/label_yeu_cau"
            android:textColor="@color/colorGrayDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgYeuCau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="10dp">

            <RadioButton
                android:id="@+id/rbMuaSam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#ff7043"
                android:checked="true"
                android:text="@string/label_mua_sam"
                android:textColor="@color/colorGrayDark"
                tools:ignore="UnusedAttribute" />

            <RadioButton
                android:id="@+id/rbSuaChua"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#ff7043"
                android:text="@string/label_sua_chua"
                android:textColor="@color/colorGrayDark"
                tools:ignore="UnusedAttribute" />
        </RadioGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/label_tieu_de"
            android:textColor="@color/colorGrayDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtTieuDeTaoMoiYc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/hint_nhap_tieu_de_yeu_cau"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            tools:ignore="Autofill,RtlSymmetry" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrayDark" />

    <LinearLayout
        android:id="@+id/llThemThietBiMuaSam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/label_them_thiet_bi"
            android:textColor="@color/colorGrayDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnTheoKeHoachAddYc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="15dp"
            android:text="@string/label_theo_ke_hoach"
            android:textAllCaps="false" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorGrayDark" />

    <LinearLayout
        android:id="@+id/llAllTruongTaoMoiMuaSam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_thiet_bi"
            android:textColor="#827717"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_nhom_thiet_bi"
            android:textColor="#827717"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_so_luong_yc"
            android:textColor="#827717"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_action_tmms"
            android:textColor="#827717"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAllTruongTaoMoiSuaChua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:weightSum="7">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_chon_qlyc_sc"
            android:textColor="#827717"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_thiet_bi_qlyc_tmsc"
            android:textColor="#827717"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_ma_dinh_danh_qlyc_tmsc"
            android:textColor="#827717"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_nhom_thiet_bi_qlyc_tmsc"
            android:textColor="#827717"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1.5dp"
            android:layout_height="match_parent"
            android:background="@color/colorGrayDark" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/label_trang_thai_qlyc_tmsc"
            android:textColor="#827717"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorGrayDark" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTaoMoiYCMS"
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTaoMoiYCSC"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/colorGrayDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/label_giai_trinh"
            android:textColor="@color/colorGrayDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtGiaiTrinhYc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#b3e5fc"
            android:hint="@string/label_nhap_giai_trinh_yeu_cau"
            android:inputType="text"
            android:padding="10dp"
            tools:ignore="Autofill" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btnTaoGuiYc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/label_tao_va_gui_yeu_cau"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnResetYc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@id/btnTaoGuiYc"
            android:layout_toLeftOf="@id/btnTaoGuiYc"
            android:text="@string/label_reset"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btHuyYc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_toStartOf="@id/btnResetYc"
            android:layout_toLeftOf="@id/btnResetYc"
            android:text="@string/label_huy"
            android:textAllCaps="false" />
    </RelativeLayout>
</LinearLayout>